# ocrdesktop

./: pyproject.toml
